# itu-swa-architecture-recovery

./: .gitignore  README.md  graph.py  load.py  main.py  pyproject.toml  run.py  sdwgf.py  visualizer.py
src/: loader.py  run.py  visualizer.py
